@@ -1,3 +1,6 @@
+2012-12-27
+ * hide/show milliseconds in time differences
+
 2012-12-20
  * replacing wrong characters in FITS header
 
